array.island.Island.scala.error
Compilation error:
Island:4: error: identifier expected but integer literal found.
  while (num[lvl] <= num[lvl+1]) {
                             ^Island:7: error: ']' expected but '}' found.
}
^